# devenv

./: .gitignore  Cargo.toml  README.md
devenv-cli/: Cargo.toml
devenv-cli/src/: main.rs
devenv-common/: Cargo.toml
devenv-common/src/: dependency.rs  error.rs  lib.rs
devenv-core/: Cargo.toml
devenv-core/src/: configuration.rs  container.rs  devenv.rs  filesystem.rs  lib.rs  mount.rs
devenv-dependencies/: Cargo.toml
devenv-dependencies/src/: apt.rs  lib.rs  provider.rs
examples/: create-debian-rootfs.sh  example-debian.toml  example.toml
src/: configuration.rs  container.rs  devenv.rs  error.rs  filesystem.rs  lib.rs  main.rs  options.rs
